# gpsdo-fw

./: .gitmodules  .mxproject  CMakeLists.txt  README.md  gpsdo.ioc  openocd.cfg
.github/workflows/: build.yml  release.yml
Core/Inc/: main.h  stm32f1xx_hal_conf.h  stm32f1xx_it.h
Core/Src/: gpio.c  main.c  rtc.c  stm32f1xx_it.c  tim.c  usart.c
cmake/stm32cubemx/: CMakeLists.txt
gpsdo/: eeprom.c  frequency.c  frequency.h  gps.h  int.c  int.h  main.c  menu.c  menu.h
lib/: CMakeLists.txt
lib/LCD/: LCD.c  LCD_Config.h
lib/stm32/: .mxproject  CMakeLists.txt  gpsdo.ioc
lib/stm32/Core/Inc/: main.h  stm32f1xx_hal_conf.h  stm32f1xx_it.h
lib/stm32/Core/Src/: dma.c  gpio.c  main.c  stm32f1xx_it.c  usart.c
lib/stm32/cmake/stm32cubemx/: CMakeLists.txt
src/: eeprom.h  frequency.c  frequency.h  gps.c  gps.h  int.c  main.c  menu.c
